--- a/db/families.yaml
+++ b/db/families.yaml
@@ -36,6 +36,14 @@ families:
     sector: media
     generations: 3
     status: active
+  pritzker:
+    origin: USA
+    sector: hotels, finance
+    status: active
+    note: Hyatt Hotels, Chicago dynasty
+    members:
+    - person: penny-pritzker
+      generation: 3
   rockefeller:
     origin: USA
     founder: John D. Rockefeller Sr.
